# roman_math_lib

./: Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  libroman_math.la  main  main.c  roman_math.c  roman_math.h  roman_math.lo
src/.deps/: main.Po  roman_math.Plo
src/.libs/: libroman_math.la  libroman_math.lai  libroman_math.so.0.0.0  lt-main  main
tests/: Makefile  Makefile.am  Makefile.in  check_roman_math  check_roman_math.c
tests/.deps/: check_roman_math-check_roman_math.Po
tests/.libs/: check_roman_math  lt-check_roman_math
